Revert "Adding fixed table headers, created custom overflow, changing login and showing invalid email or password message"
This reverts commit 5638e1eb0a36f47c3219e7252478e7dcb1967377.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,22 +23,3 @@ table > tbody > tr,
 .v-chip {
   cursor: pointer !important;
 }
-
-* {
-  scrollbar-width: auto;
-  scrollbar-color: #db1e72 #1e1f24;
-}
-
-*::-webkit-scrollbar {
-  width: 16px;
-}
-
-*::-webkit-scrollbar-track {
-  background: #1e1f24;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #db1e72;
-  border-radius: 10px;
-  border: 3px solid #1e1f24;
-}
